--- a/.github/workflows/sqlfluff.yml
+++ b/.github/workflows/sqlfluff.yml
@@ -37,5 +37,10 @@ jobs:
       - name: 'Show outputs (Optional)'
         shell: bash
         run: |
+          SQL_FILE_PATTERN="${FILE_PATTERN:?}"
+          SOURCE_REFERENCE="origin/${GITHUB_PULL_REQUEST_BASE_REF:?}"
+          changed_files=$(git diff --name-only --no-color "$SOURCE_REFERENCE" "HEAD" -- "${SQLFLUFF_PATHS:?}" |
+            grep -e "${SQL_FILE_PATTERN:?}" |
+            xargs -I% bash -c 'if [[ -f "%" ]] ; then echo "%"; fi' || :)
           echo '${{ steps.lint-sql.outputs.sqlfluff-results }}' | jq -r '.'
           echo '${{ steps.lint-sql.outputs.sqlfluff-results-rdjson }}' | jq -r '.'
