--- a/.github/workflows/sqlfluff.yml
+++ b/.github/workflows/sqlfluff.yml
@@ -16,9 +16,9 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
-on:
-  pull_request:
-jobs:
+# on:
+#   pull_request:
+# jobs:
   test-check:
     name: runner / sqlfluff (github-check)
     runs-on: ubuntu-latest
