--- a/.github/workflows/sql_test.yml
+++ b/.github/workflows/sql_test.yml
@@ -7,6 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: khan/pull-request-comment-trigger@master
+        id: check
+        with:
+          trigger: '/lint'
+          reaction: rocket
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - uses: yu-iskw/action-sqlfluff@v3
         id: lint-sql
         with:
